# router

./: .gitignore  README.md  icon.svg.import  project.godot
app_godot/: autoload_primitives.gdextension  block_units.gdextension
app_godot/scenes/: bg_default.tscn
app_godot/scripts/: autoload_globals_tileset.gd  bg_default.gd  block_units_junction.gd  playfield_cell_tileset.gd
assets/: belts.png.import
assets/backgrounds/: default.png.import  default_bg_texture.png.import
godot/: block_units.gdextension  project.godot
godot/licenses/: main.tscn
godot/scenes/: main.tscn
godot/scripts/: bg_default.gd  main_Control.gd
lib_rust/: Cargo.toml  build.rs  build.sh  find_file.rs
lib_rust/autoload_primitives/: Cargo.toml
lib_rust/autoload_primitives/src/: autoload_primitives.rs  lib.rs  mod.rs
lib_rust/block_units/: Cargo.toml
lib_rust/block_units/src/: lib.rs  mod.rs  tile_related.rs
lib_rust/internal_primitives/: Cargo.toml
rust/block_units/: Cargo.toml
scenes/: bg_default.tscn  main.tscn  playfield_cell_tileset.tres  playfiled_cell_tileset.tres  settings.tscn  test_map.tscn
scenes/block_units/: junction.tscn  line_block1.tscn  line_block2.tscn  line_block3.tscn  line_block4.tscn  route1_90deg.tscn  route1_straight.tscn  route2.tscn  route3.tscn  route_join2T.tscn  route_join3.tscn  void.tscn
scripts/: Playfield.gd  TextureRect_Background.gd  TileMap_NextTiles.gd  autoload_globals.gd  autoload_globals_settings.gd  autoload_globals_tileanimation.gd  autoload_globals_tileset.gd  block_units_base.gd  block_units_void.gd  playfiled_cell_tileset.gd
(+11 files in other folders)
