[package]
name = "block_units" # let's make sure package (lib) name matches dir-name
version = "0.1.0"
edition = "2021"

[lib]
# For Godot, we need to compile to a dynamic library (cdylib)
# It's tempting to create "rlib" and/or "staticlib", but because we'll get an entry-point (init already defined) error, we'll leave it as dynamic.
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

# NOTE: This is NOT a crate (it's an GDExtension with entry point - which will give you linker error),
#       so do NOT include it in dependencies (for linking)
#  >>>>> autoload_primitives = { path = "../autoload_primitives"}
[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
internal_primitives = { path = "../internal_primitives" }
